MET-5684 Fix toList issues